--- a/Quiz.html
+++ b/Quiz.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <nav>
-            <a href="dashboard.html">Home</a>&nbsp;&nbsp;&nbsp;
+            <a href="index.html">Home</a>&nbsp;&nbsp;&nbsp;
             <a href="quiz.html">Quiz</a>&nbsp;&nbsp;&nbsp;
             <a href="login.html">Logout</a>
         </nav>
