--- a/indexx.html
+++ b/indexx.html
@@ -10,7 +10,7 @@
         <h1>Login</h1>
         <p>Enter your email and password to access your account</p>
         
-        <form action="index.html" method="get">
+        <form action="Dashboard.html" method="get">
             <div>
                 <label for="email">Email:</label>
                 <input 
