--- a/Dashboard.html
+++ b/Dashboard.html
@@ -10,7 +10,7 @@
         <nav>
             <a href="home">Home</a> &nbsp;&nbsp;&nbsp;|
             <a href="quiz.html">Quiz</a> &nbsp;&nbsp;&nbsp;|
-            <a href="login.html">Logout</a>
+            <a href="index.html">Logout</a>
         </nav>
     </header>
 
