--- a/Quiz.html
+++ b/Quiz.html
@@ -8,16 +8,16 @@
 <body>
     <header>
         <nav>
-            <a href="index.html">Home</a>&nbsp;&nbsp;&nbsp;
+            <a href="dashboard.html">Home</a>&nbsp;&nbsp;&nbsp;
             <a href="quiz.html">Quiz</a>&nbsp;&nbsp;&nbsp;
-            <a href="login.html">Logout</a>
+            <a href="index.html">Logout</a>
         </nav>
     </header>
 
     <main>
         <h1>Quiz</h1>
         
-        <form action="login.html" method="get">
+        <form action="index.html" method="get">
             <div class="question">
                 <h3>1. What is the capital of France?</h3>
                 <input type="radio" id="q1a" name="q1" value="a">
