--- a/Dashboard.html
+++ b/Dashboard.html
@@ -9,7 +9,7 @@
     <header>
         <nav>
             <a href="home">Home</a> &nbsp;&nbsp;&nbsp;|
-            <a href="quiz.html">Quiz</a> &nbsp;&nbsp;&nbsp;|
+            <a href="Quiz.html">Quiz</a> &nbsp;&nbsp;&nbsp;|
             <a href="index.html">Logout</a>
         </nav>
     </header>
